--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, ".expo/App.tsx", "App.js"  ]
+    ".expo/App.tsx",
+    "App.js"
+  ]
 }
