--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.19",
+    "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -35,6 +35,7 @@
     "expo-web-browser": "~14.0.2",
     "fs": "^0.0.1-security",
     "glob": "^11.0.1",
+    "lottie-react-native": "^7.2.2",
     "path": "^0.12.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -58,6 +59,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
