--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dev-menu": "^4.1.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
